--- a/keyboard.html
+++ b/keyboard.html
@@ -158,7 +158,7 @@ Some users may have difficulty using a mouse and instead use other input devices
 
     <div id="global-app-error" class="app-error hidden"></div>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="./forms_files/jquery.datepick.css"> 
 <script type="text/javascript" src="./forms_files/jquery.plugin.js"></script> 
 <script type="text/javascript" src="./forms_files/jquery.datepick.js"></script>
