--- a/buttons.html
+++ b/buttons.html
@@ -95,7 +95,7 @@ Some users may use voice navigation software to navigate around the screen, if t
 	
         <div class="form-section">
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 		<script>
 		
