--- a/buttons.html
+++ b/buttons.html
@@ -101,10 +101,10 @@ Some users may use voice navigation software to navigate around the screen, if t
 		
 $(function() {
     $('#link').click(function() {
-		alert('link clicked');
+		alert('start link clicked');
 	});
     $('#button').click(function() {
-		alert('button clicked');
+		alert('stop button clicked');
 	});
 });
 
