--- a/blur.html
+++ b/blur.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0073)https://govuk-elements.herokuapp.com/form-elements/example-form-elements/ -->
 <html lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Example: Building in a standard way</title>
+    <title>Example: Deteriorating eye conditions</title>
 
 
     
